# mhs

backend/: db.sqlite3  pyproject.toml
backend/core/: settings.py  urls.py
backend/src/apps/applied_tests/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/applied_tests/migrations/: 0001_initial.py
backend/src/apps/appointments/: apis.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/appointments/migrations/: 0001_initial.py  0002_initial.py
backend/src/apps/diagnostics/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/diagnostics/migrations/: 0001_initial.py
backend/src/apps/groups/: apps.py  models.py  urls.py  views.py
backend/src/apps/groups/migrations/: 0001_initial.py
backend/src/apps/patients/: apis.py  apps.py  choices.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/patients/migrations/: 0001_initial.py  0002_alter_patient_diagnostics_alter_patient_groups.py  0002_patientquestionnaire_evaluation_date.py  0003_alter_patientquestionnaire_evaluation_date.py  0003_rename_medical_record_number_patient_medical_record_id.py  0004_alter_patientquestionnaire_evaluation_date.py
backend/src/apps/questionnaires/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/reports/: apps.py  models.py  serializers.py
backend/src/apps/sectors/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/users/: apis.py  authentication.py  models.py  serializers.py  urls.py
(+7 files in other folders)
